fixed undo button mobile

--- a/frontend/src/app/components/sites/catan/game/game.component.css
+++ b/frontend/src/app/components/sites/catan/game/game.component.css
@@ -248,4 +248,8 @@
         gap: 3rem;
         max-width: 400px;
     }
+
+    .ship-actions {
+        flex-direction: column;
+    }
 }
